--- a/res/layout/activity_pemasukan.xml
+++ b/res/layout/activity_pemasukan.xml
@@ -29,7 +29,7 @@
 		        android:layout_marginLeft="10dip"    		        
 		        android:textSize="18dip"
 		        android:textColor="@color/black_soft"       
-		        android:text="Total Pengeluaran"/>
+		        android:text="Total Pemasukan"/>
     
 		    <TextView
 		        android:id="@+id/pemasukan_total"
