--- a/res/layout/tagihan_fragment_list_rows.xml
+++ b/res/layout/tagihan_fragment_list_rows.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@android:color/white">    
+    android:orientation="vertical"    >    
     
     <ImageView 
         android:clickable="false"
