--- a/res/layout/hutang_activity.xml
+++ b/res/layout/hutang_activity.xml
@@ -2,12 +2,12 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+              android:layout_height="fill_parent"
+              android:background="@android:color/white">
 
-    <TextView
-        android:id="@+id/hutang_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="hutang" />
+    <android.support.v4.view.ViewPager 
+        android:id="@+id/hutang_activity_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
