--- a/res/layout/hutang_cicilan_list_rows.xml
+++ b/res/layout/hutang_cicilan_list_rows.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@android:color/white"    >    
+    android:background="@color/sunday_2">    
     
     <ImageView 
         android:clickable="false"
@@ -15,7 +15,7 @@
         android:layout_centerVertical="true"             
         android:src="@drawable/bullet"/>    
     
-    <TextView
+   <TextView
 		android:id="@+id/hutang_cicilan_list_rows_judul"		
 		android:layout_width="wrap_content"
 		android:maxWidth="200dp"		
@@ -23,28 +23,31 @@
 		android:layout_toRightOf="@id/hutang_cicilan_list_rows_bullet"
 		android:layout_alignParentTop="true"
 		android:paddingTop="10dp"		
-		android:textColor="@color/black_soft"   
-		android:textSize="18dip"/>
-        
-    <TextView
-    	android:id="@+id/hutang_cicilan_list_rows_nominal"    	
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
-		android:layout_marginRight="10dp"
-		android:paddingTop="10dp"		        
-		android:textColor="@color/blue_modern"  		        
-		android:textSize="16dip" />
-		        
-    <TextView        
+		android:textColor="@android:color/black"   
+		android:textSize="18sp"/>
+
+	<TextView        
         android:id="@+id/hutang_cicilan_list_rows_tanggal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/bullet"
         android:paddingBottom="10dp"
         android:layout_below="@id/hutang_cicilan_list_rows_judul"
-        android:textSize="16dip"
-        android:textColor="@color/black_soft"   />
+        android:textSize="16sp"
+        android:textColor="@color/text_red"   />
+      
+   <TextView
+    	android:id="@+id/hutang_cicilan_list_rows_nominal"    	
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/hutang_cicilan_list_rows_judul"
+		android:layout_toRightOf="@id/hutang_cicilan_list_rows_tanggal"		
+		android:layout_marginLeft="15dp"				
+		android:paddingBottom="10dp"       
+		android:textColor="@color/text_green"	        
+		android:textSize="16sp" />
+		        
+
     
 
 </RelativeLayout>
